--- a/src/Orc.NuGetExplorer.Xaml/Orc.NuGetExplorer.Xaml.csproj
+++ b/src/Orc.NuGetExplorer.Xaml/Orc.NuGetExplorer.Xaml.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="MSBuild.Sdk.Extras">
   <PropertyGroup>
-    <TargetFrameworks>net46;net47;netcoreapp3.0</TargetFrameworks>
+    <TargetFrameworks>net47;netcoreapp3.0</TargetFrameworks>
     <AssemblyName>Orc.NuGetExplorer.Xaml</AssemblyName>
     <RootNamespace>Orc.NuGetExplorer</RootNamespace>
     <DefaultLanguage>en-US</DefaultLanguage>
