--- a/src/Orc.NuGetExplorer/Orc.NuGetExplorer.csproj
+++ b/src/Orc.NuGetExplorer/Orc.NuGetExplorer.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="MSBuild.Sdk.Extras">
   <PropertyGroup>
-    <TargetFrameworks>net47;netcoreapp3.0</TargetFrameworks>
+    <TargetFrameworks>net46;net47;netcoreapp3.0</TargetFrameworks>
     <AssemblyName>Orc.NuGetExplorer</AssemblyName>
     <RootNamespace>Orc.NuGetExplorer</RootNamespace>
     <DefaultLanguage>en-US</DefaultLanguage>
@@ -26,7 +26,13 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="ModuleInit.Fody" Version="1.9.0" PrivateAssets="all" />
+    <PackageReference Include="Nito.AsyncEx.Coordination" Version="5.0.0" />
+    <PackageReference Include="NuGet.Commands" Version="4.9.4" />
+    <PackageReference Include="NuGet.Credentials" Version="4.9.4" />
+    <PackageReference Include="NuGet.PackageManagement" Version="4.9.4" />
+    <PackageReference Include="NuGet.Resolver" Version="4.9.4" />
     <PackageReference Include="Obsolete.Fody" Version="4.4.3" PrivateAssets="all" />
+    <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
     <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="4.5.0" />
     <PackageReference Include="WpfAnalyzers" Version="2.2.0.2" PrivateAssets="all" />
   </ItemGroup>
@@ -50,16 +56,9 @@
     <PackageReference Update="NETStandard.Library" Version="2.0.1" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net47'">
-    <PackageReference Include="NuGet.Protocol">
-      <Version>5.0.0</Version>
-    </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.0'">
-    <PackageReference Include="NuGet.Protocol">
-      <Version>5.0.0</Version>
-    </PackageReference>
+  <ItemGroup>
+    <Folder Include="NuGet\" />
+    <Folder Include="Repositories\" />
   </ItemGroup>
 
   <Import Project="$(MSBuildProjectDirectory)\..\Directory.build.shared.explicit.props" Condition="Exists('$(MSBuildProjectDirectory)\..\Directory.build.shared.explicit.props')" />
